--- a/ph4070ti/0.2-Serial-pad.md
+++ b/ph4070ti/0.2-Serial-pad.md
@@ -5,7 +5,226 @@
 ## Minfo
 
 ## Execution
+```
+$ ./cnn-cifar10 
+Parallel (pad) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.542471 seconds
+Create Network time:0.000034 seconds
+Load Network Parameters time:0.003341 seconds
+Create Ouputs time:0.000240 seconds
+
+Net Forward total time:559.234069 seconds
+    Time for conv1: 173.409166 seconds
+    Time for relu1: 3.219943 seconds
+    Time for pool1: 3.366670 seconds
+    Time for conv2: 286.789987 seconds
+    Time for relu2: 0.920351 seconds
+    Time for pool2: 0.994664 seconds
+    Time for conv3: 89.566840 seconds
+    Time for relu3: 0.244244 seconds
+    Time for pool3: 0.259516 seconds
+    Time for fc: 0.441647 seconds
+    Time for softmax: 0.008486 seconds
+
+  Conv: 549.765993 seconds
+  ReLU: 4.384538 seconds
+  Pool: 4.620850 seconds
+  FC:   0.441647 seconds
+  Softmax: 0.008486 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.001756 seconds
+Free memory time:0.039289 seconds
+Total time:559.821200 seconds
+END!
+```
 
 ## Profiling
+```
+$ ./cnn-cifar10-profile 
+Parallel (pad) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.537864 seconds
+Create Network time:0.000036 seconds
+Load Network Parameters time:0.003300 seconds
+Create Ouputs time:0.000239 seconds
+
+Net Forward total time:561.136946 seconds
+    Time for conv1: 174.091827 seconds
+    Time for relu1: 3.013559 seconds
+    Time for pool1: 3.361712 seconds
+    Time for conv2: 287.901531 seconds
+    Time for relu2: 0.867499 seconds
+    Time for pool2: 1.001455 seconds
+    Time for conv3: 89.937312 seconds
+    Time for relu3: 0.229336 seconds
+    Time for pool3: 0.270261 seconds
+    Time for fc: 0.438537 seconds
+    Time for softmax: 0.008954 seconds
+
+  Conv: 551.930669 seconds
+  ReLU: 4.110394 seconds
+  Pool: 4.633428 seconds
+  FC:   0.438537 seconds
+  Softmax: 0.008954 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.001702 seconds
+Free memory time:0.038079 seconds
+Total time:561.718165 seconds
+```
 
 ### gprof
+```
+$ gprof ./cnn-cifar10-profile -b
+Flat profile:
+
+Each sample counts as 0.01 seconds.
+  %   cumulative   self              self     total           
+ time   seconds   seconds    calls  ms/call  ms/call  name    
+ 98.17    551.31   551.31   150000     3.68     3.68  conv_forward
+  0.81    555.88     4.57   150000     0.03     0.03  pool_forward
+  0.69    559.73     3.85   150000     0.03     0.03  relu_forward
+  0.17    560.67     0.94   150000     0.01     0.01  pad_input
+  0.09    561.16     0.49        1   490.00   490.00  load_data
+  0.08    561.60     0.44    50000     0.01     0.01  fc_forward
+  0.00    561.61     0.01                             main
+  0.00    561.61     0.00   550007     0.00     0.00  cpu_timer_start
+  0.00    561.61     0.00   550007     0.00     0.00  cpu_timer_stop
+  0.00    561.61     0.00    50000     0.00     0.00  softmax_forward
+  0.00    561.61     0.00        3     0.00     0.00  free_conv
+  0.00    561.61     0.00        3     0.00     0.00  free_pool
+  0.00    561.61     0.00        3     0.00     0.00  free_relu
+  0.00    561.61     0.00        3     0.00     0.00  load_conv
+  0.00    561.61     0.00        3     0.00     0.00  make_conv_layer
+  0.00    561.61     0.00        3     0.00     0.00  make_pool_layer
+  0.00    561.61     0.00        3     0.00     0.00  make_relu_layer
+  0.00    561.61     0.00        2     0.00     0.00  malloc2D
+  0.00    561.61     0.00        1     0.00     0.00  free_fc
+  0.00    561.61     0.00        1     0.00     0.00  free_softmax
+  0.00    561.61     0.00        1     0.00     0.00  load_fc
+  0.00    561.61     0.00        1     0.00     0.00  make_fc_layer
+  0.00    561.61     0.00        1     0.00     0.00  make_softmax_layer
+
+
+                        Call graph
+
+
+granularity: each sample hit covers 4 byte(s) for 0.00% of 561.61 seconds
+
+index % time    self  children    called     name
+                                                 <spontaneous>
+[1]    100.0    0.01  561.60                 main [1]
+              551.31    0.94  150000/150000      conv_forward [2]
+                4.57    0.00  150000/150000      pool_forward [3]
+                3.85    0.00  150000/150000      relu_forward [4]
+                0.49    0.00       1/1           load_data [6]
+                0.44    0.00   50000/50000       fc_forward [7]
+                0.00    0.00  550007/550007      cpu_timer_start [8]
+                0.00    0.00  550007/550007      cpu_timer_stop [9]
+                0.00    0.00   50000/50000       softmax_forward [10]
+                0.00    0.00       3/3           make_conv_layer [15]
+                0.00    0.00       3/3           make_relu_layer [17]
+                0.00    0.00       3/3           make_pool_layer [16]
+                0.00    0.00       3/3           load_conv [14]
+                0.00    0.00       3/3           free_pool [12]
+                0.00    0.00       3/3           free_conv [11]
+                0.00    0.00       3/3           free_relu [13]
+                0.00    0.00       2/2           malloc2D [18]
+                0.00    0.00       1/1           make_fc_layer [22]
+                0.00    0.00       1/1           make_softmax_layer [23]
+                0.00    0.00       1/1           load_fc [21]
+                0.00    0.00       1/1           free_fc [19]
+                0.00    0.00       1/1           free_softmax [20]
+-----------------------------------------------
+              551.31    0.94  150000/150000      main [1]
+[2]     98.3  551.31    0.94  150000         conv_forward [2]
+                0.94    0.00  150000/150000      pad_input [5]
+-----------------------------------------------
+                4.57    0.00  150000/150000      main [1]
+[3]      0.8    4.57    0.00  150000         pool_forward [3]
+-----------------------------------------------
+                3.85    0.00  150000/150000      main [1]
+[4]      0.7    3.85    0.00  150000         relu_forward [4]
+-----------------------------------------------
+                0.94    0.00  150000/150000      conv_forward [2]
+[5]      0.2    0.94    0.00  150000         pad_input [5]
+-----------------------------------------------
+                0.49    0.00       1/1           main [1]
+[6]      0.1    0.49    0.00       1         load_data [6]
+-----------------------------------------------
+                0.44    0.00   50000/50000       main [1]
+[7]      0.1    0.44    0.00   50000         fc_forward [7]
+-----------------------------------------------
+                0.00    0.00  550007/550007      main [1]
+[8]      0.0    0.00    0.00  550007         cpu_timer_start [8]
+-----------------------------------------------
+                0.00    0.00  550007/550007      main [1]
+[9]      0.0    0.00    0.00  550007         cpu_timer_stop [9]
+-----------------------------------------------
+                0.00    0.00   50000/50000       main [1]
+[10]     0.0    0.00    0.00   50000         softmax_forward [10]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[11]     0.0    0.00    0.00       3         free_conv [11]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[12]     0.0    0.00    0.00       3         free_pool [12]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[13]     0.0    0.00    0.00       3         free_relu [13]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[14]     0.0    0.00    0.00       3         load_conv [14]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[15]     0.0    0.00    0.00       3         make_conv_layer [15]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[16]     0.0    0.00    0.00       3         make_pool_layer [16]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[17]     0.0    0.00    0.00       3         make_relu_layer [17]
+-----------------------------------------------
+                0.00    0.00       2/2           main [1]
+[18]     0.0    0.00    0.00       2         malloc2D [18]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[19]     0.0    0.00    0.00       1         free_fc [19]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[20]     0.0    0.00    0.00       1         free_softmax [20]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[21]     0.0    0.00    0.00       1         load_fc [21]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[22]     0.0    0.00    0.00       1         make_fc_layer [22]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[23]     0.0    0.00    0.00       1         make_softmax_layer [23]
+-----------------------------------------------
+
+
+Index by function name
+
+   [2] conv_forward           [20] free_softmax           [17] make_relu_layer
+   [8] cpu_timer_start        [14] load_conv              [23] make_softmax_layer
+   [9] cpu_timer_stop          [6] load_data              [18] malloc2D
+   [7] fc_forward             [21] load_fc                 [5] pad_input
+  [11] free_conv               [1] main                    [3] pool_forward
+  [19] free_fc                [15] make_conv_layer         [4] relu_forward
+  [12] free_pool              [22] make_fc_layer          [10] softmax_forward
+  [13] free_relu              [16] make_pool_layer
+  ```
