--- a/ph4070ti/2.2-Data-pad.md
+++ b/ph4070ti/2.2-Data-pad.md
@@ -1,20 +1,29 @@
 # Parallel Data, Padding
 ## Code
 ```c
-52: void pad_input(float* restrict X, Conv_Layer* l) {
-#pragma acc parallel loop 
+60: void pad_input(float* restrict X, Conv_Layer* l) {
+#pragma acc parallel loop present(X,l)
   for ( int c = 0; c < l->in_depth; c++) {
     #pragma acc loop
     for (int j = 0; j < l->in_height; j++) {
       #pragma acc loop
       for (int i = 0; i < l->in_width; i++) {
-        ...
+        int padded_idx = (j + l->padding) * l->padded_width + (i + l->padding) + c * l->padded_height * l->padded_width;
+        int in_idx = j * l->in_width + i + c * l->in_height * l->in_width;
+        l->in_padded[padded_idx] = X[in_idx];
+      }
+    }
+  }
 }
 
 
-70: void conv_forward(float* restrict X, Conv_Layer* l, float* restrict Y) {
+// Performs the forward pass for a convolutional layer.
+// X: Input data, l: Convolutional layer, Y: Output data
+78: void conv_forward(float* restrict X, Conv_Layer* l, float* restrict Y) {
 
   int in_size = l->in_width*l->in_height*l->in_depth;
+#pragma acc data copyin(X[0:in_size]) present(l) copyout(Y[0:l->out_size])
+{
     pad_input(X, l); //Create input with zero-padding
    // For each output feature map
 #pragma acc parallel loop  
@@ -36,12 +45,7 @@
 ## Minfo
 ```
 $ make
-nvc -acc -gpu=managed -Minfo=all -c11 -Wall -Wextra -march=native -c main.c -o main.o
-arr2txt:
-    332, Zero trip check eliminated
-arr2txt_2:
-    354, Zero trip check eliminated
-nvc -acc -gpu=managed -Minfo=all -c11 -Wall -Wextra -march=native -c layers.c -o layers.o
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -c layers.c -o layers.o
 make_conv_layer:
      42, Generating enter data copyin(layer[:1])
          Generating enter data create(layer->weights[:layer->weights_size])
@@ -81,11 +85,7 @@ fc_forward:
     240, FMA (fused multiply-add) instruction(s) generated
 load_conv:
     302, Generating update device(l->weights[:l->weights_size],l->bias[:l->out_depth])
-nvc -acc -gpu=managed -Minfo=all -c11 -Wall -Wextra -march=native -c malloc2D.c -o malloc2D.o
-nvc -acc -gpu=managed -Minfo=all -c11 -Wall -Wextra -march=native -c timer.c -o timer.o
-cpu_timer_stop:
-     11, FMA (fused multiply-add) instruction(s) generated
-nvc -acc -gpu=managed -Minfo=all -c11 -Wall -Wextra -march=native -o cnn-cifar10 main.o layers.o malloc2D.o timer.o
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -o cnn-cifar10 main.o layers.o malloc2D.o timer.o
 ```
 
 ## Execution
@@ -94,39 +94,34 @@ nvc -acc -gpu=managed -Minfo=all -c11 -Wall -Wextra -march=native -o cnn-cifar10
 $ ./cnn-cifar10 
 Parallel (pad) Code
 CNN for 50000 images
-Loading input batch 1...
-Loading input batch 2...
-Loading input batch 3...
-Loading input batch 4...
-Loading input batch 5...
-Load Data time:0.273425 seconds
-Create Network time:0.000827 seconds
-Load Network Parameters time:0.003356 seconds
-Create Ouputs time:0.000276 seconds
+Load Data time:0.390018 seconds
+Create Network time:0.123133 seconds
+Load Network Parameters time:0.003375 seconds
+Create Ouputs time:0.000170 seconds
 
-Net Forward total time:125.529977 seconds
-    Time for conv1: 51.667516 seconds
-    Time for relu1: 11.344141 seconds
-    Time for pool1: 1.608676 seconds
-    Time for conv2: 33.970075 seconds
-    Time for relu2: 7.658795 seconds
-    Time for pool2: 1.720742 seconds
-    Time for conv3: 12.384277 seconds
-    Time for relu3: 4.327141 seconds
-    Time for pool3: 0.699889 seconds
-    Time for fc: 0.131167 seconds
-    Time for softmax: 0.005138 seconds
+Net Forward total time:93.543965 seconds
+    Time for conv1: 50.563866 seconds
+    Time for relu1: 0.226810 seconds
+    Time for pool1: 0.573387 seconds
+    Time for conv2: 31.374860 seconds
+    Time for relu2: 0.078262 seconds
+    Time for pool2: 0.188051 seconds
+    Time for conv3: 10.317742 seconds
+    Time for relu3: 0.029737 seconds
+    Time for pool3: 0.048366 seconds
+    Time for fc: 0.123772 seconds
+    Time for softmax: 0.006580 seconds
 
-  Conv: 98.021868 seconds
-  ReLU: 23.330077 seconds
-  Pool: 4.029307 seconds
-  FC:   0.131167 seconds
-  Softmax: 0.005138 seconds
+  Conv: 92.256468 seconds
+  ReLU: 0.334809 seconds
+  Pool: 0.809804 seconds
+  FC:   0.123772 seconds
+  Softmax: 0.006580 seconds
 
 Net Accuracy: 78.84 % 
-Net Accuracy time:0.000272 seconds
-Free memory time:0.016566 seconds
-Total time:125.824700 seconds
+Net Accuracy time:0.000283 seconds
+Free memory time:0.037835 seconds
+Total time:94.098779 seconds
 ```
 
 ## Profiling
@@ -140,75 +135,77 @@ Loading input batch 2...
 Loading input batch 3...
 Loading input batch 4...
 Loading input batch 5...
-Load Data time:0.273079 seconds
-Create Network time:0.000793 seconds
-Load Network Parameters time:0.003390 seconds
-Create Ouputs time:0.000270 seconds
+Load Data time:0.385766 seconds
+Create Network time:0.135556 seconds
+Load Network Parameters time:0.003403 seconds
+Create Ouputs time:0.000170 seconds
 
-Net Forward total time:128.137126 seconds
-    Time for conv1: 52.475141 seconds
-    Time for relu1: 11.407223 seconds
-    Time for pool1: 1.609185 seconds
-    Time for conv2: 34.773422 seconds
-    Time for relu2: 7.725128 seconds
-    Time for pool2: 1.723457 seconds
-    Time for conv3: 13.188544 seconds
-    Time for relu3: 4.384253 seconds
-    Time for pool3: 0.700485 seconds
-    Time for fc: 0.131216 seconds
-    Time for softmax: 0.006350 seconds
+Net Forward total time:97.300599 seconds
+    Time for conv1: 51.852827 seconds
+    Time for relu1: 0.215578 seconds
+    Time for pool1: 0.576631 seconds
+    Time for conv2: 32.617770 seconds
+    Time for relu2: 0.077195 seconds
+    Time for pool2: 0.187920 seconds
+    Time for conv3: 11.552741 seconds
+    Time for relu3: 0.028445 seconds
+    Time for pool3: 0.048891 seconds
+    Time for fc: 0.123662 seconds
+    Time for softmax: 0.006421 seconds
 
-  Conv: 100.437107 seconds
-  ReLU: 23.516604 seconds
-  Pool: 4.033127 seconds
-  FC:   0.131216 seconds
-  Softmax: 0.006350 seconds
+  Conv: 96.023338 seconds
+  ReLU: 0.321218 seconds
+  Pool: 0.813442 seconds
+  FC:   0.123662 seconds
+  Softmax: 0.006421 seconds
 
 Net Accuracy: 78.84 % 
-Net Accuracy time:0.000272 seconds
-Free memory time:0.016687 seconds
-Total time:128.431617 seconds
+Net Accuracy time:0.000260 seconds
+Free memory time:0.037805 seconds
+Total time:97.863558 seconds
 END!
 
 Accelerator Kernel Timing data
-/home/gskondras/cifar/cnn-cifar10_0/1.3-Parallel-pad/layers.c
+/home/gskondras/cifar/cnn-cifar10_0/2.2-Data-pad/layers.c
   make_conv_layer  NVIDIA  devicenum=0
-    time(us): 0
+    time(us): 59
     42: data region reached 9 times
-/home/gskondras/cifar/cnn-cifar10_0/1.3-Parallel-pad/layers.c
+        42: data copyin transfers: 15
+             device time(us): total=59 max=9 min=2 avg=3
+/home/gskondras/cifar/cnn-cifar10_0/2.2-Data-pad/layers.c
   free_conv  NVIDIA  devicenum=0
-    time(us): 0
+    time(us): 25
     53: data region reached 9 times
-/home/gskondras/cifar/cnn-cifar10_0/1.3-Parallel-pad/layers.c
+        53: data copyin transfers: 9
+             device time(us): total=25 max=6 min=2 avg=2
+/home/gskondras/cifar/cnn-cifar10_0/2.2-Data-pad/layers.c
   pad_input  NVIDIA  devicenum=0
-    time(us): 9,077,248
+    time(us): 350,001
     60: compute region reached 150000 times
         60: kernel launched 150000 times
             grid: [1024]  block: [128]
-             device time(us): total=9,077,248 max=414 min=39 avg=60
-            elapsed time(us): total=10,835,853 max=604 min=51 avg=72
+             device time(us): total=350,001 max=3 min=2 avg=2
+            elapsed time(us): total=1,915,199 max=452 min=11 avg=12
     60: data region reached 300000 times
-/home/gskondras/cifar/cnn-cifar10_0/1.3-Parallel-pad/layers.c
+/home/gskondras/cifar/cnn-cifar10_0/2.2-Data-pad/layers.c
   conv_forward  NVIDIA  devicenum=0
-    time(us): 87,325,549
+    time(us): 89,200,126
     82: data region reached 300000 times
+        82: data copyin transfers: 150000
+             device time(us): total=719,497 max=18 min=3 avg=4
+        111: data copyout transfers: 150000
+             device time(us): total=1,160,124 max=27 min=3 avg=7
     83: compute region reached 150000 times
         83: kernel launched 150000 times
             grid: [1024]  block: [128]
-             device time(us): total=87,325,549 max=1,065 min=181 avg=582
-            elapsed time(us): total=88,815,401 max=1,077 min=189 avg=592
-/home/gskondras/cifar/cnn-cifar10_0/1.3-Parallel-pad/layers.c
+             device time(us): total=87,320,505 max=1,017 min=181 avg=582
+            elapsed time(us): total=88,767,934 max=1,030 min=190 avg=591
+/home/gskondras/cifar/cnn-cifar10_0/2.2-Data-pad/layers.c
   load_conv  NVIDIA  devicenum=0
-    time(us): 0
+    time(us): 30
     302: update directive reached 3 times
+        302: data copyin transfers: 6
+             device time(us): total=30 max=10 min=2 avg=5
 ```
 
 ### nsys
-GPU Contexts
-Run 170.500 s
-
-Time	Total Time	Instances	Avg	Med	Min	Max	StdDev	Category	Operation
-96.3%	143.866 s	150000	959.109 μs	1.053 ms	352.194 μs	2.161 ms	455.340 μs	CUDA_KERNEL	conv_forward_46_gpu
-2.1%	3.081 s	809354	3.806 μs	3.199 μs	1.439 μs	163.329 μs	3.889 μs	MEMORY_OPER	[CUDA memcpy Unified Host-to-Device]
-1.6%	2.421 s	1117044	2.167 μs	992 ns	575 ns	39.840 μs	2.366 μs	MEMORY_OPER	[CUDA memcpy Unified Device-to-Host]
-
